--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -1,18 +1,69 @@
 FROM ubuntu:latest
 
-# install packages
+ARG TARGETARCH
+RUN echo "arch=$TARGETARCH"
+# install curl
 RUN apt update
 RUN apt install -y curl libicu-dev jq
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# install docker
+RUN apt-get update
+RUN apt-get install ca-certificates curl
+RUN install -m 0755 -d /etc/apt/keyrings
+RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+RUN chmod a+r /etc/apt/keyrings/docker.asc
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+RUN apt-get update
+RUN apt-get install -y docker-ce-cli
+
+# install JDK
+WORKDIR /opt
+RUN apt-get install -y libavformat-dev libavdevice-dev python3-av
+RUN if [ $TARGETARCH = "arm64" ]; then \
+        curl -o graalvm-community.tar.gz -L https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_linux-aarch64_bin.tar.gz \
+    ; fi
+RUN if [ $TARGETARCH = "amd64" ]; then \
+        curl -o graalvm-community.tar.gz -L https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_linux-x64_bin.tar.gz \
+    ; fi
+RUN tar -xzf graalvm-community.tar.gz
+RUN rm -rf graalvm-community.tar.gz
+RUN mv graalvm-community* jdk
+ENV JAVA_HOME=/opt/jdk
+ENV PATH=/opt/jdk/bin:$PATH
+COPY intermediate.der /opt/jdk/
+RUN keytool -importcert -alias home -keystore $JAVA_HOME/lib/security/cacerts -storepass changeit -file /opt/jdk/intermediate.der -noprompt
+RUN rm -rf /opt/jdk/intermediate.der
+
 WORKDIR /home/ubuntu
 USER ubuntu
 
-# copied from github install runner
-RUN mkdir actions-runner && cd actions-runner
-RUN curl -o actions-runner-linux-arm64-2.316.1.tar.gz -L https://github.com/actions/runner/releases/download/v2.316.1/actions-runner-linux-arm64-2.316.1.tar.gz
-RUN echo "4f506deac376013a95683fd5873e9c40f27e5790895147ccaa24d7c970532249  actions-runner-linux-arm64-2.316.1.tar.gz" | sha256sum -c
-RUN tar xzf ./actions-runner-linux-arm64-2.316.1.tar.gz
-COPY add-runner-arm64.sh /home/ubuntu/add-runner-arm64.sh
+# install github runner
+RUN mkdir actions-runner
+WORKDIR /home/ubuntu/actions-runner
+RUN if [ $TARGETARCH = "arm64" ]; then \
+        curl -o actions-runner-linux-arm64-2.321.0.tar.gz -L https://github.com/actions/runner/releases/download/v2.321.0/actions-runner-linux-arm64-2.321.0.tar.gz && \
+        echo "62cc5735d63057d8d07441507c3d6974e90c1854bdb33e9c8b26c0da086336e1 actions-runner-linux-arm64-2.321.0.tar.gz" | sha256sum -c && \
+        tar xzf ./actions-runner-linux-arm64-2.321.0.tar.gz && \
+        rm -rf actions-runner-linux-arm64-2.321.0.tar.gz \
+    ; fi
+RUN if [ $TARGETARCH = "amd64" ]; then \
+        curl -o actions-runner-linux-x64-2.321.0.tar.gz -L https://github.com/actions/runner/releases/download/v2.321.0/actions-runner-linux-x64-2.321.0.tar.gz && \
+        echo "ba46ba7ce3a4d7236b16fbe44419fb453bc08f866b24f04d549ec89f1722a29e  actions-runner-linux-x64-2.321.0.tar.gz" | sha256sum -c && \
+        tar xzf ./actions-runner-linux-x64-2.321.0.tar.gz && \
+        rm -rf actions-runner-linux-x64-2.321.0.tar.gz \
+    ; fi
+COPY home/ubuntu/actions-runner/add-runner.sh /home/ubuntu/actions-runner/add-runner.sh
 
-CMD ["./add-runner-arm64.sh"]
+# Download gradle
+WORKDIR /home/ubuntu
+COPY --chown=ubuntu home/ubuntu/gradle-template/ gradle-template/
+WORKDIR /home/ubuntu/gradle-template
+RUN ./gradlew --version
+RUN rm -rf /home/ubuntu/gradle-template
+
+WORKDIR /home/ubuntu/actions-runner
+
+CMD ["./add-runner.sh"]
+
+# ENTRYPOINT ["tail", "-f", "/dev/null"]
