--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -49,7 +49,7 @@ RUN if [ $TARGETARCH = "arm64" ]; then \
         rm -rf actions-runner-linux-arm64-2.323.0.tar.gz \
     ; fi
 RUN if [ $TARGETARCH = "amd64" ]; then \
-        curl -o actions-runner-linux-x64-2.323.0.tar.gz -L https://github.com/actions/runner/releases/download/v2.323.0/actions-runner-linux-x64-2.323.0.tar.gz \
+        curl -o actions-runner-linux-x64-2.323.0.tar.gz -L https://github.com/actions/runner/releases/download/v2.323.0/actions-runner-linux-x64-2.323.0.tar.gz && \
         echo "0dbc9bf5a58620fc52cb6cc0448abcca964a8d74b5f39773b7afcad9ab691e19  actions-runner-linux-x64-2.323.0.tar.gz" | sha256sum -c && \
         tar xzf ./actions-runner-linux-x64-2.323.0.tar.gz && \
         rm -rf actions-runner-linux-x64-2.323.0.tar.gz \
